--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,10 @@
-title: Just the Docs Template
-description: A starter template for a Jeykll site using the Just the Docs theme!
+title: Ashutosh Kumar
+description: None
 theme: just-the-docs
 
-url: https://just-the-docs.github.io
+url: https://ashu1069.github.io
+baseurl: https://ashu1069.github.io
 
 aux_links:
-  Template Repository: https://github.com/just-the-docs/just-the-docs-template
+  Template Repository: https://ashu1069.github.io
+
