--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -33,6 +33,8 @@ jobs:
           bundler-cache: true
           cache-version: 0
           working-directory: '${{ github.workspace }}/docs'
+      - name: Install dependencies
+        run: bundle install 
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v5
