--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -4,8 +4,6 @@ on:
   push:
     branches: 
       - "main"
-    paths:
-      - "docs/**"
   workflow_dispatch:
 
 permissions:
@@ -20,9 +18,6 @@ concurrency:
 jobs:
   build:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: docs
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -32,20 +27,19 @@ jobs:
           ruby-version: '3.3'
           bundler-cache: true
           cache-version: 0
-          working-directory: '${{ github.workspace }}/docs'
       - name: Install dependencies
         run: bundle install 
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v5
       - name: Build with Jekyll
-        run: bundle exec jekyll build --url "${{ steps.pages.outputs.base_path }}"
+        run: bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}"
         env:
           JEKYLL_ENV: production
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: docs/_site  # Specify the path if it's not the default
+          path: ./_site
 
   deploy:
     environment:
